<resources>
    <string name="app_name">Calculator</string>
    <string name="_3">3</string>
    <string name="x">x</string>
    <string name="dot">.</string>
    <string name="_6">6</string>
    <string name="_0">0</string>
    <string name="divide">/</string>
    <string name="clr">CLR</string>
    <string name="equal_to">=</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="minus">-</string>
    <string name="mod">%</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rad">RAD</string>
    <string name="deg">DEG</string>
    <string name="inv">INV</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="asin">sin\u207b\u00b9</string>
    <string name="acos">cos\u207b\u00b9</string>
    <string name="atan">tan\u207b\u00b9</string>
    <string name="d_sin">sin(</string>
    <string name="d_cos">cos(</string>
    <string name="d_tan">tan(</string>
    <string name="d_asin">sin\u207b\u00b9(</string>
    <string name="e_asin">asin(</string>
    <string name="d_acos">cos\u207b\u00b9(</string>
    <string name="d_atan">tan\u207b\u00b9(</string>
    <string name="e_acos">acos(</string>
    <string name="e_atan">atan(</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="d_log">log(</string>
    <string name="d_ln">ln(</string>
    <string name="u03c0">π</string>
    <string name="infinity">\u221e</string>
    <string name="divideSymbol">\u00f7</string>
    <string name="exp">e</string>
    <string name="d_exp">e(</string>
    <string name="e_exp">e(</string>
    <string name="xy_log">log(%s)</string>
    <string name="xy_ln">ln(%s)</string>
    <string name="closed_exp">e<sup>(%s)</sup></string>
    <string name="closee_exp">e(%s)</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="pow">^</string>
    <string name="d_pow">^(</string>
    <string name="e_pow">pow(</string>
    <string name="factorial">!</string>

    <string name="sqrt">√</string>
    <string name="d_sqrt">√(</string>
    <string name="e_sqrt">sqrt(</string>

    <string name="fib">fib</string>
    <string name="d_fib">fib(</string>
    <string name="closed_fib">fib( %s )</string>
    <string name="xrt"><sup>x</sup>√y</string>
    <string name="d_xrt">)√(</string>
    <string name="e_xrt">)xrt(</string>
    <string name="random">RANDOM</string>
    <string name="sinh">sinh</string>
    <string name="d_sinh">sinh(</string>
    <string name="cosh">cosh</string>
    <string name="tanh">tanh</string>
    <string name="asinh">sinh\u207b\u00b9</string>
    <string name="acosh">cosh\u207b\u00b9</string>
    <string name="atanh">tanh\u207b\u00b9</string>
    <string name="d_cosh">cosh(</string>
    <string name="d_tanh">tanh(</string>
    <string name="d_asinh">sinh\u207b\u00b9(</string>
    <string name="e_asinh">asinh(</string>
    <string name="d_acosh">cosh\u207b\u00b9(</string>
    <string name="e_acosh">acosh(</string>
    <string name="d_atanh">tanh\u207b\u00b9(</string>
    <string name="e_atanh">atanh(</string>
    <string name="dot_description">dot</string>
    <string name="delete_Description">delete single input</string>
    <string name="switch_advance_description">switch to advance button</string>
</resources>