<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.CommonButton">

    <data>

        <variable
            name="viewModel"
            type="com.example.calculator.viewmodel.CalculatorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sevenButton"
            style="@style/ShapeAppearanceOverlay.Calculator.Button"
            android:onClick='@{()->viewModel.appendExp(@string/_7, "")}'
            android:text="@string/_7"
            app:layout_constraintBottom_toTopOf="@id/fourButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/eightButton"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/eightButton"
            style="@style/ShapeAppearanceOverlay.Calculator.Button"
            android:onClick='@{()->viewModel.appendExp(@string/_8, "")}'
            android:text="@string/_8"
            app:layout_constraintBottom_toTopOf="@id/fiveButton"
            app:layout_constraintLeft_toRightOf="@id/sevenButton"
            app:layout_constraintRight_toLeftOf="@id/nineButton"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nineButton"
            style="@style/ShapeAppearanceOverlay.Calculator.Button"
            android:onClick='@{()->viewModel.appendExp(@string/_9, "")}'
            android:text="@string/_9"
            app:layout_constraintBottom_toTopOf="@id/sixButton"
            app:layout_constraintLeft_toRightOf="@id/eightButton"
            app:layout_constraintRight_toLeftOf="@id/plusButton"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/plusButton"
            style="@style/ShapeAppearanceOverlay.Calculator.Button.Operators"
            android:onClick='@{()->viewModel.appendExp(@string/plus, "")}'
            android:text="@string/plus"
            app:layout_constraintBottom_toTopOf="@id/minusButton"
            app:layout_constraintLeft_toRightOf="@id/nineButton"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fourButton"
            style="@style/ShapeAppearanceOverlay.Calculator.Button"
            android:onClick='@{()->viewModel.appendExp(@string/_4, "")}'
            android:text="@string/_4"
            app:layout_constraintBottom_toTopOf="@id/oneButton"
            app:layout_constraintLeft_toLeftOf="@id/sevenButton"
            app:layout_constraintTop_toBottomOf="@id/sevenButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fiveButton"
            style="@style/ShapeAppearanceOverlay.Calculator.Button"
            android:onClick='@{()->viewModel.appendExp(@string/_5, "")}'
            android:text="@string/_5"
            app:layout_constraintBottom_toTopOf="@id/twoButton"
            app:layout_constraintLeft_toLeftOf="@id/eightButton"
            app:layout_constraintTop_toBottomOf="@id/eightButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sixButton"
            style="@style/ShapeAppearanceOverlay.Calculator.Button"
            android:onClick='@{()->viewModel.appendExp(@string/_6, "")}'
            android:text="@string/_6"
            app:layout_constraintBottom_toTopOf="@id/threeButton"
            app:layout_constraintLeft_toLeftOf="@id/nineButton"
            app:layout_constraintTop_toBottomOf="@id/nineButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minusButton"
            style="@style/ShapeAppearanceOverlay.Calculator.Button.Operators"
            android:onClick='@{()->viewModel.appendExp(@string/minus, "")}'
            android:text="@string/minus"
            app:layout_constraintBottom_toTopOf="@id/multiplyButton"
            app:layout_constraintLeft_toLeftOf="@id/plusButton"
            app:layout_constraintTop_toBottomOf="@id/plusButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/oneButton"
            style="@style/ShapeAppearanceOverlay.Calculator.Button"
            android:onClick='@{()->viewModel.appendExp(@string/_1, "")}'
            android:text="@string/_1"
            app:layout_constraintBottom_toTopOf="@id/pointButton"
            app:layout_constraintLeft_toLeftOf="@id/fourButton"
            app:layout_constraintTop_toBottomOf="@id/fourButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/twoButton"
            style="@style/ShapeAppearanceOverlay.Calculator.Button"
            android:onClick='@{()->viewModel.appendExp(@string/_2, "")}'
            android:text="@string/_2"
            app:layout_constraintBottom_toTopOf="@id/zeroButton"
            app:layout_constraintLeft_toLeftOf="@id/fiveButton"
            app:layout_constraintTop_toBottomOf="@id/fiveButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/threeButton"
            style="@style/ShapeAppearanceOverlay.Calculator.Button"
            android:onClick='@{()->viewModel.appendExp(@string/_3, "")}'
            android:text="@string/_3"
            app:layout_constraintBottom_toTopOf="@id/modulusButton"
            app:layout_constraintLeft_toLeftOf="@id/sixButton"
            app:layout_constraintTop_toBottomOf="@id/sixButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/multiplyButton"
            style="@style/ShapeAppearanceOverlay.Calculator.Button.Operators"
            android:onClick='@{()->viewModel.appendExp(@string/x, "")}'
            android:text="@string/x"
            app:layout_constraintBottom_toTopOf="@id/divideButton"
            app:layout_constraintLeft_toLeftOf="@id/minusButton"
            app:layout_constraintTop_toBottomOf="@id/minusButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pointButton"
            style="@style/ShapeAppearanceOverlay.Calculator.Button.Operators"
            android:contentDescription="@string/dot_description"
            android:gravity="start|center_vertical"
            android:onClick='@{()->viewModel.appendExp(@string/dot, "")}'
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            app:icon="@drawable/ic_baseline_circle_24"
            app:iconGravity="textEnd"
            app:iconPadding="0dp"
            app:iconSize="3dp"
            app:layout_constraintBottom_toTopOf="@id/removeButton"
            app:layout_constraintLeft_toLeftOf="@id/oneButton"
            app:layout_constraintTop_toBottomOf="@id/oneButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/zeroButton"
            style="@style/ShapeAppearanceOverlay.Calculator.Button"
            android:onClick='@{()->viewModel.appendExp(@string/_0, "")}'
            android:text="@string/_0"
            app:layout_constraintBottom_toTopOf="@id/clearButton"
            app:layout_constraintLeft_toLeftOf="@id/twoButton"
            app:layout_constraintTop_toBottomOf="@id/twoButton"
            app:layout_marginBaseline="6dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/modulusButton"
            style="@style/ShapeAppearanceOverlay.Calculator.Button.Operators"
            android:onClick='@{()->viewModel.appendExp(@string/mod, "")}'
            android:text="@string/mod"
            app:layout_constraintBottom_toTopOf="@id/equalButton"
            app:layout_constraintLeft_toLeftOf="@id/threeButton"
            app:layout_constraintTop_toBottomOf="@id/threeButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/divideButton"
            style="@style/ShapeAppearanceOverlay.Calculator.Button.Operators"
            android:text="@string/divideSymbol"
            app:layout_constraintBottom_toTopOf="@id/advanceButton"
            app:layout_constraintLeft_toLeftOf="@id/multiplyButton"
            app:layout_constraintTop_toBottomOf="@id/multiplyButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/removeButton"
            style="@style/ShapeAppearanceOverlay.Calculator.Button.Operators"
            android:contentDescription="@string/delete_Description"
            android:gravity="start|center_vertical"
            android:onClick="@{()->viewModel.deleteExp()}"
            app:icon="@drawable/ic_baseline_cancel_presentation_24"
            app:iconGravity="textEnd"
            app:iconPadding="0dp"
            app:iconSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/pointButton"
            app:layout_constraintTop_toBottomOf="@id/pointButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearButton"
            style="@style/ShapeAppearance.Calculator.Operator.DynamicSize"
            android:onClick="@{()->viewModel.clearExp()}"
            android:text="@string/clr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/zeroButton"
            app:layout_constraintTop_toBottomOf="@id/zeroButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/equalButton"
            style="@style/ShapeAppearanceOverlay.Calculator.Button.Operators"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:onClick="@{()->viewModel.equalTo()}"
            android:padding="0dp"
            android:text="@string/equal_to"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/modulusButton"
            app:layout_constraintTop_toBottomOf="@id/modulusButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/advanceButton"
            style="@style/ShapeAppearanceOverlay.Calculator.Button.Operators"
            android:contentDescription="@string/switch_advance_description"
            android:gravity="start|center_vertical"
            android:onClick="setFragment"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            app:icon="@drawable/ic_baseline_chevron_right_24"
            app:iconGravity="textEnd"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/divideButton"
            app:layout_constraintTop_toBottomOf="@id/divideButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
